--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon src/index.js",
-    "build": "nodemon src/index.js"
+    "build": "echo 'No build step needed for this Node.js application'"
   },
   "keywords": [],
   "author": "",
