--- a/backend/package.json
+++ b/backend/package.json
@@ -23,8 +23,10 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.3",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.9",
     "streamifier": "^0.1.1",
     "stripe": "^17.5.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.9"
   }
 }
