--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
+    "dev": "node src/index.js",
     "start": "node src/index.js",
     "build": "echo 'No build step needed for this Node.js application'"
   },
